--- a/src/App.css
+++ b/src/App.css
@@ -21,10 +21,16 @@
   bottom: 0px;
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
-  z-index: 10;
+  z-index: 1000;
   background-color: #ccc;
   text-align: center;
 }
+.ansim-info > a {
+  font-size: 15px;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 .search-container {
   width: 100%;
   height: 100%;
